<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- onboarding_survey___landing_page strings -->

    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="welcome_to_flikshop_string">Welcome to Flikshop</string>
    <string name="before_you_pick_your_first_course__we_want_to_learn_a_little_more_about_you_to_customize_your_learning_experience__string">Before you pick your first course, we want to learn a little more about you to customize your learning experience!</string>
    <string name="continue_string">START</string>
    <string name="here_is_a_short_tutorial_of_how_to_use_and_navigate_flikshopme_string">Here is a short tutorial of how to use and navigate FlikshopMe</string>
    <string name="flikshop_tutorial_string">Flikshop Tutorial</string>
    <string name="back_string">Back</string>
    <string name="need_help__string">Need Help?</string>
    <string name="view_more_tutorials_string">VIew More Tutorials</string>
    <string name="you_can_come_back_to_this_at_any_time_by_clicking_the_question_mark_icon_on_the_top_right_of_your_screen_string">You can come back to this at any time by clicking the question mark icon on the top right of your screen</string>
    <string name="continue_ek1_string">CONTINUE</string>
    <string name="before_you_start__select_some_topics_that_interest_you_most__string">Before you start, select some topics that interest you most. </string>
    <string name="this_will_help_curate_content_personalized_for_you__you_may_select_as_many_interests_you_d_like_but_we_d_recommend_at_least_3_interest__don_t_worry__you_can_change_this_later__string">This will help curate content personalized for you. You may select as many interests youd like but wed recommend at least 3 interest. Dont worry, you can change this later!</string>
    <string name="_1_out_of_5_chosen_string">1 out of 5 chosen</string>
    <string name="skip__for_now__ek1_string">Skip, for now. </string>
    <string name="build_apps_for_phones__improve_your_job_search_or_your_goal_to_start_a_business_by_learning_coding_languages__string">Build apps for phones. Improve your job search or your goal to start a business by learning coding languages.</string>
    <string name="mobile_app_development_string">Mobile App Development</string>
    <string name="learn_how_to_design_a_website_and_how_to_create_a_great_online_experience__string">Learn how to design a website and how to create a great online experience. </string>
    <string name="web_design_string">Web Design</string>
    <string name="learn_the_basics_of_accounting_and_investing_string">Learn the basics of accounting and investing</string>
    <string name="finances_string">Finances</string>
    <string name="lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__placerat__string">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat.</string>
    <string name="construction_string">Construction</string>
    <string name="learn_how_to_build_a_sustaining_business_from_trainers_who_started____string">Learn how to build a sustaining business from trainers who started...</string>
    <string name="entrepreneurship_string">Entrepreneurship</string>
    <string name="learn_how_to_record__edit_and_compose_videos_and_audio____string">Learn how to record, edit and compose videos and audio...</string>
    <string name="content_editing_string">Content Editing</string>
    <string name="back_ek1_string">Back</string>
    <string name="continue_ek2_string">FINISH</string>
    <string name="before_you_start__select_some_topics_that_interest_you_most__ek1_string">Before you start, select some topics that interest you most. </string>
    <string name="back_ek2_string">Back</string>
    <string name="this_will_help_curate_content_personalized_for_you__you_may_select_as_many_interests_you_d_like_but_we_d_recommend_at_least_3_interest__don_t_worry__you_can_change_this_later__ek1_string">This will help curate content personalized for you. You may select as many interests youd like but wed recommend at least 3 interest. Dont worry, you can change this later!</string>
    <string name="_1_out_of_5_chosen_ek1_string">1 out of 5 chosen</string>
    <string name="skip__for_now__ek2_string">Skip, for now. </string>
    <string name="learn_how_to_design_a_website_and_how_to_create_a_great_online_experience__ek1_string">Learn how to design a website and how to create a great online experience. </string>
    <string name="web_design_ek1_string">Web Design</string>
    <string name="learn_the_basics_of_accounting_and_investing_ek1_string">Learn the basics of accounting and investing</string>
    <string name="finances_ek1_string">Finances</string>
    <string name="lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__placerat__ek1_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat.</string>
    <string name="construction_ek1_string">Construction</string>
    <string name="learn_how_to_build_a_sustaining_business_from_trainers_who_started____ek1_string">Learn how to build a sustaining business from trainers who started...</string>
    <string name="entrepreneurship_ek1_string">Entrepreneurship</string>
    <string name="learn_how_to_record__edit_and_compose_videos_and_audio____ek1_string">Learn how to record, edit and compose videos and audio...</string>
    <string name="content_editing_ek1_string">Content Editing</string>
    <string name="continue_ek3_string">FINISH</string>
    <string name="build_apps_for_phones__improve_your_job_search_or_your_goal_to_start_a_business_by_learning_coding_languages__ek1_string">Build apps for phones. Improve your job search or your goal to start a business by learning coding languages.</string>
    <string name="mobile_app_development_ek1_string">Mobile App Development</string>
    <string name="before_you_start__select_some_topics_that_interest_you_most__ek2_string">Before you start, select some topics that interest you most. </string>
    <string name="this_will_help_curate_content_personalized_for_you__you_may_select_as_many_interests_you_d_like_but_we_d_recommend_at_least_3_interest__don_t_worry__you_can_change_this_later__ek2_string">This will help curate content personalized for you. You may select as many interests youd like but wed recommend at least 3 interest. Dont worry, you can change this later!</string>
    <string name="_1_out_of_5_chosen_ek2_string">0 out of 5 chosen</string>
    <string name="skip__for_now__ek3_string">Skip, for now. </string>
    <string name="learn_how_to_build_apps_for_a_phone__these_skills_can_help_your_job_search____string">Learn how to build apps for a phone. These skills can help your job search...</string>
    <string name="mobile_app_development_ek2_string">Mobile App Development</string>
    <string name="learn_how_to_build_apps_for_a_phone__these_skills_can_help_your_job_search____ek1_string">Learn how to build apps for a phone. These skills can help your job search...</string>
    <string name="web_design_ek2_string">Web Design</string>
    <string name="lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__placerat__ek2_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat.</string>
    <string name="finances_ek2_string">Finances</string>
    <string name="lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__placerat__ek3_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Placerat.</string>
    <string name="construction_ek2_string">Construction</string>
    <string name="learn_how_to_build_a_sustaining_business_from_trainers_who_started____ek2_string">Learn how to build a sustaining business from trainers who started...</string>
    <string name="entrepreneurship_ek2_string">Entrepreneurship</string>
    <string name="learn_how_to_record__edit_and_compose_videos_and_audio____ek2_string">Learn how to record, edit and compose videos and audio...</string>
    <string name="content_editing_ek2_string">Content Editing</string>
    <string name="back_ek3_string">Back</string>
    <string name="continue_ek4_string">FINISH</string>
    <string name="got_it__string">GOT IT!</string>
    <string name="_1_interest_needed_string">1 Interest Needed</string>
    <string name="tap_on_a_topic_to_choose_your_interest_and_customize_your_experience_string">Tap on a topic to choose your interest and customize your experience</string>
    <string name="you_re_ready_to_begin__string">You\'re Ready to Begin!</string>
    <string name="thanks_for_completing_the_customization_survey__you_may_now_view_the_catalog_to_choose_your_first_course__string">Thanks for completing the customization survey! You may now view the catalog to choose your first course.</string>
    <string name="next___string">Next ></string>
    <string name="___back_string"> Back</string>
    <string name="flikshop_string">Flikshop</string>
    <string name="continue_ek5_string">START</string>
    <string name="finish_string">FINISH</string>
    <string name="skip__for_now__string">Skip, for now. </string>
    <string name="OFF">OFF</string>
    <string name="ON">ON</string>
    <string name="chosen">0</string>

</resources>